--- a/style.css
+++ b/style.css
@@ -23,6 +23,12 @@ body,html {
     margin: 0;
 }
 
+.hideportvideo {
+	display: none !important;
+	padding:0 !important;
+	border:none !important;
+}
+
 .grecaptcha-badge {
 	visibility: hidden;
 }
